--- a/app/views/users/settings/_form_profile.html.erb
+++ b/app/views/users/settings/_form_profile.html.erb
@@ -6,7 +6,7 @@
     <div class="sm:col-span-6">
       <%= f.label field, class: "block text-sm font-medium text-gray-700" %>
       <div class="mt-1">
-        <%= f.text_field field, class: "shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md" %>
+        <%= f.text_field field, class: "shadow-sm focus:ring-hamers-red-500 focus:border-hamers-red-500 block w-full sm:text-sm border-gray-300 rounded-md" %>
       </div>
     </div>
   <% end %>
@@ -14,14 +14,14 @@
   <div class="sm:col-span-6">
     <%= f.label :birthday, class: "block text-sm font-medium text-gray-700" %>
     <div class="mt-1">
-      <%= f.date_field :birthday, class: "shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md" %>
+      <%= f.date_field :birthday, class: "shadow-sm focus:ring-hamers-red-500 focus:border-hamers-red-500 block w-full sm:text-sm border-gray-300 rounded-md" %>
     </div>
   </div>
 
   <legend class="sr-only">Notifications</legend>
   <div class="relative flex items-start">
     <div class="flex items-center h-5">
-      <%= f.check_box :anonymous, class: "focus:ring-indigo-500 h-4 w-4 text-indigo-600 border-gray-300 rounded" %>
+      <%= f.check_box :anonymous, class: "focus:ring-hamers-red-500 h-4 w-4 text-hamers-red-600 border-gray-300 rounded" %>
     </div>
     <div class="ml-3 text-sm">
       <%= f.label :anonymous, "Anoniem op publieke pagina's", class: "font-medium text-gray-700" %>
@@ -29,5 +29,5 @@
     </div>
   </div>
 
-  <%= f.submit "Opslaan", class: "cursor-pointer inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" %>
+  <%= f.submit "Opslaan", class: "cursor-pointer inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-hamers-red-600 hover:bg-hamers-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-hamers-red-500" %>
 <% end %>
