--- a/app/views/shared/_trail.html.erb
+++ b/app/views/shared/_trail.html.erb
@@ -1,6 +1,6 @@
 <div class="bg-white overflow-hidden shadow rounded-lg hidden md:block">
-  <div class="px-5 mx-5">
-    <h2 class="text-indigo-400 text-xl font-extrabold my-2">Wat is er gebeurd?</h2>
+  <div class="px-5">
+    <h2 class="text-indigo-400 text-xl font-extrabold my-2 mx-5">Wat is er gebeurd?</h2>
     <div class="flex items-center w-full">
       <ul class=" divide-y divide-gray-200 w-full">
         <% @trail.each do |t| %>
