--- a/app/views/shared/_blog.html.erb
+++ b/app/views/shared/_blog.html.erb
@@ -1,7 +1,7 @@
 <div class="bg-white overflow-hidden shadow rounded-lg hidden md:block">
-  <div class="px-5 mx-5">
+  <div class="px-5">
     <%= link_to blogitems_path do %>
-      <h2 class="text-indigo-400 text-xl font-extrabold my-2">Blogposts</h2>
+      <h2 class="mx-5 text-indigo-400 text-xl font-extrabold my-2">Blogposts</h2>
     <% end %>
     <div class="flex items-center w-full">
       <ul class="divide-y divide-gray-200 w-full">
