small mobile fix

--- a/app/views/events/_table.html.erb
+++ b/app/views/events/_table.html.erb
@@ -1,4 +1,4 @@
-<div class="bg-white shadow overflow-hidden sm:rounded-md">
+<div class="bg-white sm:shadow overflow-hidden sm:rounded-md">
   <ul role="list" class="divide-y divide-gray-200">
     <% events.each do |event| %>
     <li>
