Work on beer table

--- a/app/views/usergroups/_group.html.erb
+++ b/app/views/usergroups/_group.html.erb
@@ -11,7 +11,7 @@
           <div class="flex overflow-hidden -space-x-1">
             <% group.users.each do |user| %>
               <%= link_to user, class: "inline-block" do %>
-                <%= gravatar_for user, class: "h-8 w-8 rounded-full ring-2 ring-white", alt: "user.name" %>
+                <%= gravatar_for user, class: "h-8 w-8 rounded-full ring-2 ring-white", alt: user.name %>
               <% end %>
             <% end %>
           </div>
