move usergroup page to user edit page

--- a/app/views/users/settings/_menu.html.erb
+++ b/app/views/users/settings/_menu.html.erb
@@ -4,7 +4,8 @@
     Profiel: { path: edit_user_path(current_user), icon: 'user' },
     Foto: { path: "https://gravatar.com/emails", icon: 'user-circle' },
     Wachtwoord: { path: edit_password_user_path(current_user), icon: 'lock-closed' },
-    'API-sleutels': { path: user_api_keys_path(current_user), icon: 'key' }
+    'API-sleutels': { path: user_api_keys_path(current_user), icon: 'key' },
+    'Groepen': { path: edit_usergroups_user_path(current_user), icon: 'user-group' }
   } %>
 
   <div class="hidden md:block">
