--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -3,9 +3,14 @@
 <% end %>
 
 <div class="row">
-  <div class="col-md-6">
+  <div class="mx-auto text-center my-4">
     <%= will_paginate %>
   </div>
+
+  <% if current_user&.active? %>
+    <%= link_to 'Voeg bier toe', new_beer_path, :class => 'btn btn-block btn-primary' %>
+  <% end %>
+
   <div class="col-md-6">
     <div class="pagination">
       <div class="pagination">
@@ -25,7 +30,3 @@
 </div>
 
 <%= render 'table' %>
-
-<% if current_user&.active? %>
-  <%= link_to 'Voeg bier toe', new_beer_path, :class => 'btn btn-block btn-primary' %>
-<% end %>
