--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -30,7 +30,7 @@
     </div>
     <div id="past" class="tab-pane fade">
       <%= render "events/table", events: @past_events %>
-      <%= will_paginate @past_events %>
+      <%== pagy_nav(@pagy) %>
     </div>
   </div>
 
