--- a/app/views/stickers/personal.html.erb
+++ b/app/views/stickers/personal.html.erb
@@ -13,7 +13,7 @@
     <th>Admin stuff</th>
   </tr>
   </thead>
-  <%= will_paginate %>
+  <%== pagy_nav(@pagy) %>
   <tbody>
   <% @stickers.each do |m| %>
     <tr>
@@ -45,4 +45,4 @@
   <% end %>
   </tbody>
 </table>
-<%= will_paginate %>
+<%== pagy_nav(@pagy) %>
