--- a/app/views/static_pages/trail.html.erb
+++ b/app/views/static_pages/trail.html.erb
@@ -11,7 +11,7 @@
     <th>Hoe</th>
   </tr>
   </thead>
-  <%= will_paginate @trail %>
+  <%== pagy_nav(@pagy) %>
   <tbody>
   <% @trail.each do |t| %>
     <tr>
@@ -48,4 +48,4 @@
   <% end %>
   </tbody>
 </table>
-<%= will_paginate @trail %>
+<%== pagy_nav(@pagy) %>
