--- a/app/views/meetings/notuleer.html.erb
+++ b/app/views/meetings/notuleer.html.erb
@@ -17,7 +17,7 @@
 
   <div class="form-group">
     <%= f.label :notes %><br>
-    <%= f.rich_text_area :actiontext_notes, class: 'form-control higher', data: {action: 'keyup->autosave#save'} %>
+    <%= f.rich_text_area :notes, class: 'form-control higher', data: {action: 'keyup->autosave#save'} %>
   </div>
   <div class="actions">
     <div class="btn-group">
