--- a/app/views/meetings/show.html.erb
+++ b/app/views/meetings/show.html.erb
@@ -3,7 +3,7 @@
 <% end %>
 <div class="row">
   <div class="col-md-8">
-    <%= @meeting.actiontext_notes %>
+    <%= @meeting.notes %>
   </div>
   <div class="col-md-4 info-panel">
     <div class="panel panel-default">
