--- a/app/views/beers/_table.html.erb
+++ b/app/views/beers/_table.html.erb
@@ -6,39 +6,24 @@
           <table class="min-w-full divide-y divide-gray-200">
             <thead class="bg-gray-100">
             <tr>
-              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                Naam
-              </th>
-              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                Soort
-              </th>
-              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                Cijfer
-              </th>
-              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                Brouwer
-              </th>
-              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                Land
-              </th>
-              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                Reviews
-              </th>
+              <% columns = %w[Naam Soort Cijfer Brouwer Land Reviews] %>
+              <% columns.each do |c| %>
+                <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                  <%= c %>
+                </th>
+              <% end %>
               <th scope="col" class="relative px-6 py-3">
                 <span class="sr-only">Link</span>
               </th>
             </tr>
             </thead>
-            <tbody class="bg-white divide-y divide-gray-200">
 
+            <tbody class="bg-white divide-y divide-gray-200">
             <% @beers.each do |beer| %>
               <tr>
                 <td class="px-6 py-4 whitespace-nowrap">
                   <div class="flex items-center">
-                    <div class="flex-shrink-0 h-10 w-10">
-                      <%#= gravatar_for user, class: "h-10 w-10 rounded-full", alt: "user.name" %>
-                    </div>
-                    <div class="ml-4 text-sm font-medium text-gray-900">
+                    <div class="text-sm font-medium text-gray-900">
                       <%= beer.name %>
                       <% if current_user&.reviews&.find_by(beer: beer)&.rating %>
                         <span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium <%= rating_color(current_user&.reviews&.find_by(beer: beer)&.rating) %>">
@@ -74,7 +59,6 @@
                 </td>
               </tr>
             <% end %>
-
             </tbody>
           </table>
 
