--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -2,6 +2,6 @@
   Review aanpassen
 <% end %>
 
-<%= form_for @review, html: {class: 'form-horizontal'} do |f| %>
+<%= form_for @review, html: {class: 'space-y-4 space-y'} do |f| %>
   <%= render partial: 'reviews/form', locals: {f: f} %>
 <% end %>
