--- a/app/views/users/settings/_form_password.html.erb
+++ b/app/views/users/settings/_form_password.html.erb
@@ -2,9 +2,9 @@
   <%= render 'shared/error_messages', object: f.object %>
 
   <div class="sm:col-span-6">
-    <%= f.label :password, class: "block text-sm font-medium text-gray-700" %>
+    <%= f.label :password, class: label_classes %>
     <div class="mt-1">
-      <%= f.password_field :password, autocomplete: "off", class: "shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md" %>
+      <%= f.password_field :password, autocomplete: "off", class: input_classes %>
       <% if @minimum_password_length %>
         <p class="text-sm text-gray-500" id="email-description"><%= @minimum_password_length %> characters minimum</p>
       <% end %>
@@ -12,10 +12,10 @@
   </div>
 
   <div class="sm:col-span-6">
-    <%= f.label :password_confirmation, class: "block text-sm font-medium text-gray-700" %>
+    <%= f.label :password_confirmation, class: label_classes %>
     <div class="mt-1">
-      <%= f.password_field :password_confirmation, autocomplete: "off", class: "shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md" %>
+      <%= f.password_field :password_confirmation, autocomplete: "off", class: input_classes %>
     </div>
   </div>
-  <%= f.submit "Opslaan", class: "cursor-pointer inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" %>
+  <%= f.submit "Opslaan", class: submit_classes %>
 <% end %>
