--- a/app/frontend/packs/application.css
+++ b/app/frontend/packs/application.css
@@ -1,6 +1,6 @@
 /*@import '~flatpickr';*/
 /*@import '~tablesort';*/
-@import "tailwindcss/base";
-@import "tailwindcss/components";
-@import "tailwindcss/utilities";
-@import "trix/dist/trix";
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+@import 'trix/dist/trix';
